@@ -1,3 +1,8 @@
+2005-02-21  Fred Fish  <fnf@specifixinc.com>
+
+	* dwarf2.c (find_abstract_instance_name): Call recursively
+	to handle a DW_AT_specification.
+
 2005-02-21  Thiemo Seufer  <seufer@csv.ica.uni-stuttgart.de>
 
 	* elfxx-mips.c (ecoff_swap_rpdr_out, mips_elf_output_extsym,
